# williw-solana

./: .gitignore  Anchor.toml  Cargo.toml  README.md  SECURITY.md  SUMMARY.md  VERIFICATION.md  VERIFICATION_RESULT.txt  devnet-program-keypair.json  new-testnet-keypair.json  package-lock.json  package.json  solana_api_compute_contract_plan.md  test-init.js  test-interaction.js  test-pdas.js  testnet-key.json  testnet-new-keypair.json  testnet-wallet.json  verify.sh  防攻击加固报告.md  验证完成.md
.github/workflows/: deploy.yml
programs/compute-power/: Cargo.toml
programs/compute-power/src/: lib.rs
tests/: compute-power.ts  security-tests.ts
