[package]
name = "williw"
version = "0.1.0"
description = "Solana program for compute power sharing and API consumption tracking"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "compute_power"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "1.0.0"
anchor-spl = "1.0.0"
proc-macro2 = "1.0"
